--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
         "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-        "test": "set NODE_ENV = test jest -i"
+        "test": "set NODE_ENV = test jest -i",
+        "start": "express app.js"
     },
     "dependencies": {
         "express": "^4.17.1",
@@ -15,6 +16,8 @@
         "nodemailer": "^6.5.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.0.2",
+        "swagger-jsdoc": "^7.0.0-rc.5",
+        "swagger-ui-express": "^4.1.6",
         "tup": "^0.0.0",
         "typeorm": "^0.2.31",
         "uuid": "^8.3.2",
@@ -25,6 +28,8 @@
         "@types/jest": "^26.0.20",
         "@types/nodemailer": "^6.4.0",
         "@types/supertest": "^2.0.10",
+        "@types/swagger-jsdoc": "^6.0.0",
+        "@types/swagger-ui-express": "^4.1.2",
         "@types/uuid": "^8.3.0",
         "jest": "^26.6.3",
         "supertest": "^6.1.3",
